<resources>
    <string name="app_name">Egret</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_copy_toot_url">Copy URL of toot</string>
    <string name="action_share_toot">Share toot…</string>
    <string name="action_open_toot_in_web">Open in browser</string>
    <string name="action_copy_toot_body">Copy toot</string>
    <string name="error_toot_not_exist">Oops! the Toot does not exist!</string>
    <string name="action_mute">Mute…</string>
    <string name="action_block">Block this account</string>
    <string name="action_delete">Delete this toot</string>
    <string name="action_save_image">Save this pic</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_fragment_others">Others</string>
    <string name="title_fragment_license">Open source licenses</string>
    <string name="title_fragment_mute_keyword">Mute keywords</string>
    <string name="title_fragment_mute_account">Mute Accounts</string>
    <string name="title_fragment_mute_hash_tag">Mute Hash Tags</string>
    <string name="title_fragment_mute_instance">Mute Instances</string>
    <string name="desc_fragment_mute_keyword">List of keywords to mute:</string>
    <string name="desc_fragment_mute_account">List of accounts to mute:</string>
    <string name="desc_fragment_mute_hash_tag">List of hash tags to mute:</string>
    <string name="desc_fragment_mute_instance">List of instances to mute:</string>
    <string name="desc_fragment_block_account">List of accounts to block:</string>
    <string name="desc_fragment_manage_account">Accounts you logged in:</string>
    <string name="prompt_instance">Instance domain</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_chose_instance">Chose</string>
    <string name="error_incorrect_domain">This domain name is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_saving_image">Failed to save image.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_complete_saving_image">Completed to save the image.</string>
    <string name="message_necessity_wifi_grant">To control streaming by such status, grant authority of accessing Wi-Fi status to app.</string>
    <string name="message_necessity_read_storage_grant">To pick medias, grant authority of reading storage to app.</string>
    <string name="message_necessity_write_storage_grant_capture">To capture image, grant authority of writing storage to app.</string>
    <string name="message_necessity_write_storage_grant_save">To save image, grant authority of writing storage to app.</string>
    <string name="splash_content">Egret</string>
    <string name="navigation_drawer_item_login">Login to another account</string>
    <string name="navigation_drawer_item_tl_public">Show Public Timeline</string>
    <string name="navigation_drawer_item_tl_local">Show Local Timeline</string>
    <string name="navigation_drawer_item_tl_user">Show User Timeline</string>
    <string name="navigation_drawer_item_tl_notification">Show Notifications</string>
    <string name="navigation_drawer_item_settings">Settings</string>
    <string name="navigation_drawer_item_others">Others</string>
    <string name="succeed_post_toot">The toot has been posted.</string>
    <string name="error_empty_toot">Can\'t create empty toot. Write anything</string>
    <string name="error_unable_upload_media">Failed to upload the media.</string>
    <string name="error_too_many_media">Attach media within 4.</string>
    <string name="button_create_toot">Toot</string>
    <string name="created_at">Created at:</string>
    <string name="button_list">list</string>
    <string name="button_edit">edit</string>
    <string name="button_edit_cancel">cancel</string>
    <string name="button_edit_save">save</string>
    <string name="succeed_edit_profile">Saved.</string>
    <string name="none_update_edit_profile">There are no updates on your profile.</string>
    <string name="hashtag">Hash tag:</string>
    <string name="dialog_title_choose_source">Select media source</string>
    <string name="dialog_message_choose_source">Pick existing media?\nOr capture new photo?</string>
    <string name="dialog_button_pick_media">Pick media</string>
    <string name="dialog_button_capture_image">Capture photo</string>
    <string name="dialog_button_dismiss">Cancel</string>
    <string name="dialog_title_share_toot">Share toot to other app</string>
    <string name="dialog_subject_share_toot">Share toot from Egret</string>
    <string name="mentioned_by">Mentioned by</string>
    <string name="reblogged_by">Boosted by</string>
    <string name="favourited_by">Favourited by</string>
    <string name="followed_by">Followed by</string>
    <string name="button_read_more">Read more</string>
    <string name="button_enable_spoiler">Hide</string>
    <string name="hint_new_toot">What\'s up?</string>
    <string name="hint_alert_new_toot">Write down warning here</string>
    <string name="hint_switch_body_spoiler">CW</string>
    <string name="hint_switch_media_spoiler">NSFW</string>
    <string name="hint_spinner_visibility">Visibility</string>
    <string name="hint_add_mute_keyword">Enter new keyword to mute</string>
    <string name="hint_add_mute_hash_tag">Enter new hash tag to mute</string>
    <string name="hint_add_mute_instance">Enter new instance name to mute</string>
    <string name="check_mute_keyword_is_regex">Regex</string>
    <string name="dialog_title_mute">Choose mute option</string>
    <string name="array_item_mute_account">Mute ACCOUNT: %1$s</string>
    <string name="array_item_mute_keyword">Mute KEYWORD: %1$s</string>
    <string name="array_item_mute_hash_tag">Mute HASH TAG: %1$s</string>
    <string name="array_item_mute_instance">Mute INSTANCE: %1$s</string>
    <string name="array_item_mute_client">Mute APP: %1$s</string>
    <string name="array_item_toot_visibility_public">Public</string>
    <string name="array_item_toot_visibility_private">Private</string>
    <string name="array_item_toot_visibility_unlisted">Unlisted</string>
    <string name="array_item_toot_visibility_direct">Direct</string>
    <string name="spoiler_media">Click to show this media</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_others">Others</string>
    <string name="pref_manage_accounts">Manage your accounts</string>
    <string name="pref_manage_stream">When the timeline could be streaming</string>
    <string name="pref_manage_stream_default">0</string>
    <string name="pref_manage_restrictions">Manage restrictions</string>
    <string name="pref_manage_mute">Manage mutes</string>
    <string name="pref_manage_block">Manage blocks</string>
    <string name="pref_manage_mute_accounts">Manage muting accounts</string>
    <string name="pref_manage_mute_keywords">Manage muting keywords</string>
    <string name="pref_manage_mute_hash_tags">Manage muting hashtags</string>
    <string name="pref_manage_mute_instances">Manage muting instances</string>
    <string name="pref_manage_block_accounts">Manage blocking accounts</string>
    <string name="pref_switch_to_dark_theme">Change theme color darken</string>
    <string name="pref_switch_to_use_default_browser">Change scheme to open links</string>
    <string name="pref_switch_to_show_extreme_toot_bar">Show bar to post new toot on footer of TL</string>
    <string name="pref_manage_notify_real_time">Whether notify real time</string>
    <string name="pref_stream_always">Always</string>
    <string name="pref_stream_wifi">When connect with Wi-Fi</string>
    <string name="pref_stream_never">Never</string>
    <string name="pref_switch_to_dark_theme_text_on">App theme is dark.</string>
    <string name="pref_switch_to_dark_theme_text_off">App theme is light.</string>
    <string name="pref_switch_to_dark_theme_summary_on">The theme is in dark</string>
    <string name="pref_switch_to_dark_theme_summary_off">The theme is in light</string>
    <string name="pref_switch_to_use_default_browser_text_on">Use Default Browser.</string>
    <string name="pref_switch_to_use_default_browser_text_off">Use Chrome Custom Tabs.</string>
    <string name="pref_switch_to_use_default_browser_summary_on">Use Default Browser</string>
    <string name="pref_switch_to_use_default_browser_summary_off">Use Chrome Custom Tabs</string>
    <string name="pref_switch_to_show_extreme_toot_bar_text_on">Show new toot bar.</string>
    <string name="pref_switch_to_show_extreme_toot_bar_text_off">Don\'t show new toot bar.</string>
    <string name="pref_switch_to_show_extreme_toot_bar_summary_on">Show new toot bar</string>
    <string name="pref_switch_to_show_extreme_toot_bar_summary_off">Don\'t show new toot bar</string>
    <string name="pref_manage_notify_real_time_text_on">Change to notify real time</string>
    <string name="pref_manage_notify_real_time_text_off">Change to do not notify real time</string>
    <string name="pref_manage_notify_real_time_summary_on">Notify real time</string>
    <string name="pref_manage_notify_real_time_summary_off">Do not notify real time</string>
    <string name="pref_show_licenses">Show open source licenses</string>
    <string name="license_name_stetho">Stetho</string>
    <string name="license_name_reactive_x_java">RxJava</string>
    <string name="license_name_reactive_x_android">RxAndroid</string>
    <string name="license_name_reactive_x_kotlin">RxKotlin</string>
    <string name="license_name_reactive_x_lifecycle">RxLifecycle</string>
    <string name="license_name_orma">Orma</string>
    <string name="license_name_retrofit">Retrofit</string>
    <string name="license_name_glide">Glide</string>
    <string name="license_name_timber">Timber</string>
    <string name="license_name_paper_parcel">PaperParcel</string>
    <string name="license_name_material_drawer">MaterialDrawer</string>
    <string name="license_name_circular_image_view">CircularImageView</string>
    <string name="license_name_calligraphy">Calligraphy</string>
    <string name="license_name_emoji">Emoji</string>
    <string name="license_name_commons_io">Commons-IO</string>
</resources>