<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="defaultKeyword" type="String" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/desc_fragment_mute_keyword"
            android:textColor="@color/material_gray_dark"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/wrap_add_new_keyword"
            app:layout_constraintLeft_toLeftOf="@+id/desc"
            app:layout_constraintRight_toRightOf="@+id/desc"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            tools:listitem="@layout/item_recycle_mute_keyword" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/wrap_add_new_keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/recyclerView"
            app:layout_constraintRight_toRightOf="@+id/recyclerView">

            <CheckBox
                android:id="@+id/check_is_regex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/check_mute_keyword_is_regex"
                android:textColor="@color/material_gray_dark"
                app:buttonTint="@color/icon_tint_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_add_mute_keyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_add_mute_keyword"
                android:text="@{defaultKeyword}"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/check_is_regex"
                app:layout_constraintRight_toLeftOf="@+id/button_add"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.481" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_custom_material"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>